--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -19,9 +19,13 @@ $maroon: #800000;
     background-color: rgba(250, 250, 250, 0.95);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   }
-
+  .nav-logo {
+    display: flex;
+    align-items: center;
+  }
+  
   .nav-logo img {
-    height: 40px;
+    height: 60px;
     max-width: 100%;
   }
 
